--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" /> <meta name="google-site-verification" content="uy4VN5I13_BDu3Ck08tcR_8p8P-Jvb87hN0MfxGCD4w" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mahadev Fitness Center | Commercial Vehicle Fitness Certificate – Jodhpur</title>
   <meta name="description" content="Mahadev Fitness Center is a government certified commercial vehicle fitness testing center in Jodhpur, Rajasthan. We issue and renew fitness certificates for trucks, buses and other commercial vehicles." />
