--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Mahadev Fitness Center | Commercial Vehicle Fitness Certificate – Jodhpur</title>
   <meta name="description" content="Mahadev Fitness Center is a government certified commercial vehicle fitness testing center in Jodhpur, Rajasthan. We issue and renew fitness certificates for trucks, buses and other commercial vehicles." />
   <meta name="keywords" content="Commercial Vehicle Fitness Certificate Jodhpur, Fitness Certificate Jodhpur, Government Fitness Center Jodhpur, Truck Fitness Certificate Rajasthan, Vehicle Fitness Testing Center Jodhpur, Mahadev Fitness Center" />
-  <meta name="author" content="Mahadev Fitness Center" />
+  <meta name="author" content="Mahadev Fitness Center" />  
+  <meta name="google-site-verification" content="uy4VN5I13_BDu3Ck08tcR_8p8P-Jvb87hN0MfxGCD4w" /> 
 </head>
 <!-- SEO: Local Business Schema -->
 <script type="application/ld+json">
